--- a/frontend/index.html
+++ b/frontend/index.html
@@ -406,50 +406,53 @@
         </section>
       </div>
     </main>
-    <!-- ========== FOOTER (unchanged) ========== -->
+    <!-- ========== FOOTER ========== -->
     <footer>
       <div class="f-format">
         <div class="f-list">
           <div class="f-nav">
             <h4>Navigation</h4>
-            <ul>
-              <li><a href="/frontend/index.html">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Community Membership</a></li>
-              <li><a href="#">Contact</a></li>
-            </ul>
+            <div>
+              <ul>
+                <li><a href="../index.html">Home</a></li>
+                <li>
+                  <a href="../non members/non-member-page.html">Pricing</a>
+                </li>
+                <li>
+                  <a href="./non members/contact-support.html">Contact</a>
+                </li>
+              </ul>
+            </div>
           </div>
-          <div class="f-mem">
-            <h4>Memberships</h4>
-            <ul>
-              <li><a href="#">Community</a></li>
-              <li><a href="#">Key Access</a></li>
-              <li><a href="#">Creative Workspace</a></li>
-            </ul>
-          </div>
-          <div class="f-acc">
-            <h4>Account</h4>
-            <ul>
-              <li><a href="#">Login / Sign-up</a></li>
-              <li><a href="#">Account Dashboard</a></li>
-              <li><a href="#">My Membership</a></li>
-              <li><a href="#">Billing</a></li>
-            </ul>
-          </div>
-          <div class="f-support">
-            <h4>Support</h4>
-            <ul>
-              <li><a href="#">Contact Us</a></li>
-              <li><a href="#">Report Issue</a></li>
-            </ul>
-          </div>
+
           <div class="f-logo">
-            <img src="./images/TC_Logos-01.png" alt="Placeholder Logo" />
+            <img src="../images/TC_Logos-01.png" alt="Footer Logo" />
           </div>
+        </div>
+        <hr />
+        <div class="authors">
+          <h4>Authors:</h4>
+          <ul>
+            <li>
+              <a href="https://github.com/mgoing"
+                >Malcom Going (SID: 2372291)</a
+              >
+            </li>
+            <li>
+              <a href="https://github.com/AlessandroLaMendola"
+                >Alessandro La Mendola (SID: 2158059)</a
+              >
+            </li>
+            <li>
+              <a href="https://github.com/yusufkose-aru"
+                >Yusuf Kose (SID: 2415327)</a
+              >
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
-    <script src="js/main.js"></script>
+    
     <script>
       // ================== BACKEND URL LOGIC ==================
       const backendURL =
