quick addition of membership type to user dashboard

--- a/frontend/Members/UserDashboard.html
+++ b/frontend/Members/UserDashboard.html
@@ -81,7 +81,7 @@
         font-weight: bold;
       }
 
-      .user-name {
+      .contact-info {
         color: white;
         font-size: 18px;
         font-weight: normal;
@@ -225,6 +225,7 @@
             <div class="contact-info">
               <p class="email">${userData.email}</p>
               <p class="member-id">ID: ${userData.ID}</p>
+              <p class="membership-type">Membership: ${userData.membershipType}</p>
             </div>
           </div>
           <div class="profile-settings">
