--- a/frontend/non members/community-membership.html
+++ b/frontend/non members/community-membership.html
@@ -349,7 +349,7 @@
           <!-- LEFT: Info -->
           <div class="membership-info">
             <h1>
-              <span class="red-text">Community Membership</span>
+              <span class="red-text">Community</span>
               <span class="black-text">Membership</span>
             </h1>
             <p class="subtitle">Together Culture<br />CAMBRIDGE</p>
