changes to admin image in footer

--- a/frontend/admin/event-detail.html
+++ b/frontend/admin/event-detail.html
@@ -221,7 +221,7 @@
             </div>
           </div>
           <div class="f-logo">
-            <img src="../images/PLACEHOLDER.svg" />
+            <img src="../images/TC_Logos-01.png" />
           </div>
         </div>
         <hr />
