--- a/frontend/admin/dashboard.html
+++ b/frontend/admin/dashboard.html
@@ -55,7 +55,7 @@
           </div>
 
           <div class="f-logo">
-            <img src="/images/PLACEHOLDER.svg" />
+            <img src="../images/TC_Logos-01.png" />
           </div>
         </div>
         <hr />
