--- a/frontend/admin/member.html
+++ b/frontend/admin/member.html
@@ -161,7 +161,7 @@
           </div>
 
           <div class="f-logo">
-            <img src="/images/PLACEHOLDER.svg" />
+            <img src="../images/TC_Logos-01.png" />
           </div>
         </div>
         <hr />
