Pushing minor changes to the events.js in admin to increment a user's event attendee count. and added page for users to see the events they have attended

--- a/frontend/Members/Settings.html
+++ b/frontend/Members/Settings.html
@@ -24,6 +24,7 @@
 
       body {
         background: #f5f5f5;
+        background: linear-gradient(to top, rgb(248, 119, 136), white); 
         margin-top: 20px;
       }
 
