--- a/frontend/Members/UserDashboard.html
+++ b/frontend/Members/UserDashboard.html
@@ -230,6 +230,7 @@
           </div>
           <div class="profile-settings">
             <a href="./Settings.html" class="btn btn-primary">Settings</a>
+            
           </div>
         </div>
 
@@ -238,9 +239,9 @@
           <img src="UserDashPhotos/healthyGirl.jpg" alt="Benefits" />
           <div class="title-overlay">Benefits</div>
         </a>
-        <a href="../non members/events.html" class="content-card">
+        <a href="./UserMyEvents.html" class="content-card">
           <img src="UserDashPhotos/calendar.jpg" alt="Calendar" />
-          <div class="title-overlay">Calendar</div>
+          <div class="title-overlay">My Events</div> 
         </a>
         <a href="UserDigitalContent.html" class="content-card">
           <img src="UserDashPhotos/digitalContent.jpg" alt="Digital Content" />
@@ -252,21 +253,7 @@
         </a>
       </div>
     </div>
-    <!--
-    <footer>
-      <div class="f-format">
-        <div class="f-nav">
-          <h4>Navigation</h4>
-          <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="/index.html#about">About</a></li>
-            <li><a href="../non members/registration.html">Memberships</a></li>
-            <li><a href="../non members/contact-support.html">Contact</a></li>
-          </ul>
-        </div>
-      </div>
-    </footer>
-  -->
+  
 
     <!-- ========== FOOTER ========== -->
     <footer>
